<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPhoneNumberEntry">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="961dp"
        android:layout_height="935dp"
        android:layout_marginTop="-300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_circle_24"
        android:contentDescription="@string/circles_background" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="492dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/downimg"
        android:contentDescription="@string/bottom_image" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_of_easy_fix_it" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberEnter"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/phone_number_login"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="#00346A"
        app:boxBackgroundColor="#ECEBEB"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="#00346A"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.new"
        app:endIconMode="clear_text"
        app:endIconTint="#00346A"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.new"
        app:hintTextColor="#00346A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:prefixText="+977 ">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="phone"
            android:textColor="#00346A"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#E46138"
        android:paddingLeft="30dp"
        android:paddingTop="12dp"
        android:paddingRight="30dp"
        android:paddingBottom="12dp"
        android:text="@string/continueBtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberEnter" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/all_rounder_handyman_services"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>