<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_Code">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="961dp"
        android:layout_height="935dp"
        android:layout_marginTop="-300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_circle_24"
        android:contentDescription="@string/circles_background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="492dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/downimg"
        android:contentDescription="@string/bottom_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close"
            android:contentDescription="@string/exit_btn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/archivo_semibold"
            android:paddingStart="25dp"
            android:text="@string/enter_your_code_sent_to"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <TextView
            android:id="@+id/userPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/_9843805222"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/pinbackgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:hint="@string/hint_otp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/didn_t_receive_code"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/resend_btn"
                android:textColor="#E46138"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E46138"
            android:paddingLeft="30dp"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/submit_btn"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>